// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`afterPack 1`] = `
Object {
  "linux": Array [],
  "mac": Array [],
}
`;

exports[`afterSign 1`] = `
Object {
  "linux": Array [],
  "win": Array [],
}
`;

exports[`beforeBuild 1`] = `
Object {
  "linux": Array [],
  "mac": Array [],
}
`;

exports[`build in the app package.json 1`] = `"ERR_ELECTRON_BUILDER_INVALID_CONFIGURATION"`;

exports[`cli 1`] = `
Object {
  "targets": Map {
    Platform {
      "buildConfigurationKey": "mac",
      "name": "mac",
      "nodeName": "darwin",
    } => Map {
      1 => Array [
        "dir",
      ],
    },
  },
}
`;

exports[`cli 2`] = `
Object {
  "targets": Map {
    Platform {
      "buildConfigurationKey": "linux",
      "name": "linux",
      "nodeName": "linux",
    } => Map {},
  },
}
`;

exports[`cli 3`] = `
Object {
  "targets": Map {
    Platform {
      "buildConfigurationKey": "win",
      "name": "windows",
      "nodeName": "win32",
    } => Map {},
  },
}
`;

exports[`cli 4`] = `
Object {
  "targets": Map {
    Platform {
      "buildConfigurationKey": "mac",
      "name": "mac",
      "nodeName": "darwin",
    } => Map {},
    Platform {
      "buildConfigurationKey": "linux",
      "name": "linux",
      "nodeName": "linux",
    } => Map {},
    Platform {
      "buildConfigurationKey": "win",
      "name": "windows",
      "nodeName": "win32",
    } => Map {},
  },
}
`;

exports[`cli 5`] = `
Object {
  "targets": Map {
    Platform {
      "buildConfigurationKey": "linux",
      "name": "linux",
      "nodeName": "linux",
    } => Map {
      0 => Array [
        "tar.gz",
      ],
    },
  },
}
`;

exports[`cli 6`] = `
Object {
  "targets": Map {
    Platform {
      "buildConfigurationKey": "linux",
      "name": "linux",
      "nodeName": "linux",
    } => Map {
      1 => Array [
        "tar.gz",
      ],
    },
  },
}
`;

exports[`cli 7`] = `
Object {
  "targets": Map {
    Platform {
      "buildConfigurationKey": "linux",
      "name": "linux",
      "nodeName": "linux",
    } => Map {
      1 => Array [
        "tar.gz",
      ],
    },
  },
}
`;

exports[`cli 8`] = `
Object {
  "targets": Map {
    Platform {
      "buildConfigurationKey": "win",
      "name": "windows",
      "nodeName": "win32",
    } => Map {
      1 => Array [
        "tar.gz",
      ],
    },
  },
}
`;

exports[`cli 9`] = `
Object {
  "publish": "always",
  "targets": Map {
    Platform {
      "buildConfigurationKey": "win",
      "name": "windows",
      "nodeName": "win32",
    } => Map {
      1 => Array [],
    },
  },
}
`;

exports[`cli 10`] = `
Object {
  "prepackaged": "someDir",
  "targets": Map {
    Platform {
      "buildConfigurationKey": "win",
      "name": "windows",
      "nodeName": "win32",
    } => Map {
      1 => Array [],
    },
  },
}
`;

exports[`cli 11`] = `
Object {
  "projectDir": "someDir",
  "targets": Map {
    Platform {
      "buildConfigurationKey": "win",
      "name": "windows",
      "nodeName": "win32",
    } => Map {
      1 => Array [],
    },
  },
}
`;

exports[`electron version from build 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`electron version from electron dependency 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`electron version from electron-prebuilt dependency 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`posix smart unpack 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`posix smart unpack 2`] = `
Object {
  "files": Object {
    "index.html": Object {
      "size": "<size>",
    },
    "index.js": Object {
      "size": "<size>",
    },
    "node_modules": Object {
      "files": Object {
        "base64-js": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "base64js.min.js": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "bl": Object {
          "files": Object {
            "BufferList.js": Object {
              "size": "<size>",
            },
            "LICENSE.md": Object {
              "size": "<size>",
            },
            "bl.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "buffer": Object {
          "files": Object {
            "AUTHORS.md": Object {
              "size": "<size>",
            },
            "LICENSE": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "chownr": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "chownr.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "debug": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "dist": Object {
              "files": Object {
                "debug.js": Object {
                  "size": "<size>",
                },
              },
            },
            "package.json": Object {
              "size": "<size>",
            },
            "src": Object {
              "files": Object {
                "browser.js": Object {
                  "size": "<size>",
                },
                "common.js": Object {
                  "size": "<size>",
                },
                "index.js": Object {
                  "size": "<size>",
                },
                "node.js": Object {
                  "size": "<size>",
                },
              },
            },
          },
        },
        "decompress-response": Object {
          "files": Object {
            "index.js": Object {
              "size": "<size>",
            },
            "license": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "deep-extend": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "lib": Object {
              "files": Object {
                "deep-extend.js": Object {
                  "size": "<size>",
                },
              },
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "detect-libc": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "lib": Object {
              "files": Object {
                "detect-libc.js": Object {
                  "size": "<size>",
                },
                "filesystem.js": Object {
                  "size": "<size>",
                },
                "process.js": Object {
                  "size": "<size>",
                },
              },
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "edge-cs": Object {
          "files": Object {
            "LICENSE.txt": Object {
              "size": "<size>",
            },
            "lib": Object {
              "files": Object {
                "bootstrap": Object {
                  "files": Object {
                    "Dummy.cs": Object {
                      "size": "<size>",
                    },
                    "project.json": Object {
                      "size": "<size>",
                    },
                  },
                },
                "edge-cs.js": Object {
                  "size": "<size>",
                },
              },
            },
            "package.json": Object {
              "size": "<size>",
            },
            "src": Object {
              "files": Object {
                "Edge.js.CSharp": Object {
                  "files": Object {
                    "EdgeCompiler.cs": Object {
                      "size": "<size>",
                    },
                    "gulpfile.js": Object {
                      "size": "<size>",
                    },
                    "package.json": Object {
                      "size": "<size>",
                    },
                    "project.json": Object {
                      "size": "<size>",
                    },
                  },
                },
                "edge-cs": Object {
                  "files": Object {
                    "EdgeCompiler.cs": Object {
                      "size": "<size>",
                    },
                    "Properties": Object {
                      "files": Object {
                        "AssemblyInfo.cs": Object {
                          "size": "<size>",
                        },
                      },
                    },
                  },
                },
              },
            },
            "tools": Object {
              "files": Object {
                "install.js": Object {
                  "size": "<size>",
                },
              },
            },
          },
        },
        "end-of-stream": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "expand-template": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
            "test.js": Object {
              "size": "<size>",
            },
          },
        },
        "fs-constants": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "browser.js": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "github-from-package": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "ieee754": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "inherits": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "inherits.js": Object {
              "size": "<size>",
            },
            "inherits_browser.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "ini": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "ini.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "keytar": Object {
          "files": Object {
            "LICENSE.md": Object {
              "size": "<size>",
            },
            "build": Object {
              "files": Object {
                "Release": Object {
                  "files": Object {
                    "keytar.node": Object {
                      "executable": true,
                      "size": "<size>",
                    },
                  },
                },
              },
            },
            "lib": Object {
              "files": Object {
                "keytar.js": Object {
                  "size": "<size>",
                },
              },
            },
            "node_modules": Object {
              "files": Object {
                "node-addon-api": Object {
                  "files": Object {
                    "LICENSE.md": Object {
                      "size": "<size>",
                    },
                    "common.gypi": Object {
                      "size": "<size>",
                    },
                    "except.gypi": Object {
                      "size": "<size>",
                    },
                    "index.js": Object {
                      "size": "<size>",
                    },
                    "napi-inl.deprecated.h": Object {
                      "size": "<size>",
                    },
                    "napi-inl.h": Object {
                      "size": "<size>",
                    },
                    "napi.h": Object {
                      "size": "<size>",
                    },
                    "node_api.gyp": Object {
                      "size": "<size>",
                    },
                    "noexcept.gypi": Object {
                      "size": "<size>",
                    },
                    "nothing.c": Object {
                      "size": "<size>",
                    },
                    "package-support.json": Object {
                      "size": "<size>",
                    },
                    "package.json": Object {
                      "size": "<size>",
                    },
                    "tools": Object {
                      "files": Object {
                        "README.md": Object {
                          "size": "<size>",
                        },
                        "check-napi.js": Object {
                          "size": "<size>",
                        },
                        "clang-format.js": Object {
                          "size": "<size>",
                        },
                        "conversion.js": Object {
                          "executable": true,
                          "size": "<size>",
                        },
                        "eslint-format.js": Object {
                          "size": "<size>",
                        },
                      },
                    },
                  },
                },
              },
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "lru-cache": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "lzma-native": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "bin": Object {
              "files": Object {
                "lzmajs": Object {
                  "executable": true,
                  "size": "<size>",
                },
              },
            },
            "index.js": Object {
              "size": "<size>",
            },
            "liblzma-build.sh": Object {
              "executable": true,
              "size": "<size>",
            },
            "liblzma-config.sh": Object {
              "executable": true,
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
            "prebuilds": Object {
              "files": Object {
                "darwin-arm64": Object {
                  "files": Object {
                    "electron.napi.node": Object {
                      "size": "<size>",
                    },
                    "node.napi.node": Object {
                      "size": "<size>",
                    },
                  },
                },
                "darwin-x64": Object {
                  "files": Object {
                    "electron.napi.node": Object {
                      "size": "<size>",
                    },
                    "node.napi.node": Object {
                      "size": "<size>",
                    },
                  },
                },
                "linux-arm64": Object {
                  "files": Object {
                    "electron.napi.node": Object {
                      "size": "<size>",
                    },
                    "node.napi.node": Object {
                      "size": "<size>",
                    },
                  },
                },
                "linux-x64": Object {
                  "files": Object {
                    "electron.napi.node": Object {
                      "size": "<size>",
                    },
                    "node.napi.node": Object {
                      "size": "<size>",
                    },
                  },
                },
                "win32-ia32": Object {
                  "files": Object {
                    "electron.napi.node": Object {
                      "size": "<size>",
                    },
                    "node.napi.node": Object {
                      "size": "<size>",
                    },
                  },
                },
                "win32-x64": Object {
                  "files": Object {
                    "electron.napi.node": Object {
                      "size": "<size>",
                    },
                    "node.napi.node": Object {
                      "size": "<size>",
                    },
                  },
                },
              },
            },
            "src": Object {
              "files": Object {
                "filter-array.cpp": Object {
                  "size": "<size>",
                },
                "index-parser.cpp": Object {
                  "size": "<size>",
                },
                "index-parser.h": Object {
                  "size": "<size>",
                },
                "liblzma-functions.cpp": Object {
                  "size": "<size>",
                },
                "liblzma-node.hpp": Object {
                  "size": "<size>",
                },
                "lzma-stream.cpp": Object {
                  "size": "<size>",
                },
                "module.cpp": Object {
                  "size": "<size>",
                },
                "mt-options.cpp": Object {
                  "size": "<size>",
                },
                "util.cpp": Object {
                  "size": "<size>",
                },
              },
            },
          },
        },
        "mimic-response": Object {
          "files": Object {
            "index.js": Object {
              "size": "<size>",
            },
            "license": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "minimist": Object {
          "files": Object {
            ".nycrc": Object {
              "size": "<size>",
            },
            "LICENSE": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "mkdirp-classic": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "ms": Object {
          "files": Object {
            "index.js": Object {
              "size": "<size>",
            },
            "license.md": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "napi-build-utils": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "index.md": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "node-addon-api": Object {
          "files": Object {
            "LICENSE.md": Object {
              "size": "<size>",
            },
            "common.gypi": Object {
              "size": "<size>",
            },
            "except.gypi": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "napi-inl.deprecated.h": Object {
              "size": "<size>",
            },
            "napi-inl.h": Object {
              "size": "<size>",
            },
            "napi.h": Object {
              "size": "<size>",
            },
            "node_api.gyp": Object {
              "size": "<size>",
            },
            "noexcept.gypi": Object {
              "size": "<size>",
            },
            "nothing.c": Object {
              "size": "<size>",
            },
            "package-support.json": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
            "tools": Object {
              "files": Object {
                "README.md": Object {
                  "size": "<size>",
                },
                "check-napi.js": Object {
                  "size": "<size>",
                },
                "clang-format.js": Object {
                  "size": "<size>",
                },
                "conversion.js": Object {
                  "executable": true,
                  "size": "<size>",
                },
              },
            },
          },
        },
        "node-gyp-build": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "bin.js": Object {
              "executable": true,
              "size": "<size>",
            },
            "build-test.js": Object {
              "executable": true,
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "node-gyp-build.js": Object {
              "size": "<size>",
            },
            "optional.js": Object {
              "executable": true,
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "once": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "once.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "prebuild-install": Object {
          "files": Object {
            "CONTRIBUTING.md": Object {
              "size": "<size>",
            },
            "LICENSE": Object {
              "size": "<size>",
            },
            "asset.js": Object {
              "size": "<size>",
            },
            "bin.js": Object {
              "executable": true,
              "size": "<size>",
            },
            "download.js": Object {
              "size": "<size>",
            },
            "error.js": Object {
              "size": "<size>",
            },
            "help.txt": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "log.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
            "proxy.js": Object {
              "size": "<size>",
            },
            "rc.js": Object {
              "size": "<size>",
            },
            "util.js": Object {
              "size": "<size>",
            },
          },
        },
        "pump": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
            "test-browser.js": Object {
              "size": "<size>",
            },
            "test-node.js": Object {
              "size": "<size>",
            },
          },
        },
        "rc": Object {
          "files": Object {
            "LICENSE.APACHE2": Object {
              "size": "<size>",
            },
            "LICENSE.BSD": Object {
              "size": "<size>",
            },
            "LICENSE.MIT": Object {
              "size": "<size>",
            },
            "browser.js": Object {
              "size": "<size>",
            },
            "cli.js": Object {
              "executable": true,
              "size": "<size>",
            },
            "index.js": Object {
              "executable": true,
              "size": "<size>",
            },
            "lib": Object {
              "files": Object {
                "utils.js": Object {
                  "size": "<size>",
                },
              },
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "readable-stream": Object {
          "files": Object {
            "CONTRIBUTING.md": Object {
              "size": "<size>",
            },
            "GOVERNANCE.md": Object {
              "size": "<size>",
            },
            "LICENSE": Object {
              "size": "<size>",
            },
            "errors-browser.js": Object {
              "size": "<size>",
            },
            "errors.js": Object {
              "size": "<size>",
            },
            "experimentalWarning.js": Object {
              "size": "<size>",
            },
            "lib": Object {
              "files": Object {
                "_stream_duplex.js": Object {
                  "size": "<size>",
                },
                "_stream_passthrough.js": Object {
                  "size": "<size>",
                },
                "_stream_readable.js": Object {
                  "size": "<size>",
                },
                "_stream_transform.js": Object {
                  "size": "<size>",
                },
                "_stream_writable.js": Object {
                  "size": "<size>",
                },
                "internal": Object {
                  "files": Object {
                    "streams": Object {
                      "files": Object {
                        "async_iterator.js": Object {
                          "size": "<size>",
                        },
                        "buffer_list.js": Object {
                          "size": "<size>",
                        },
                        "destroy.js": Object {
                          "size": "<size>",
                        },
                        "end-of-stream.js": Object {
                          "size": "<size>",
                        },
                        "from-browser.js": Object {
                          "size": "<size>",
                        },
                        "from.js": Object {
                          "size": "<size>",
                        },
                        "pipeline.js": Object {
                          "size": "<size>",
                        },
                        "state.js": Object {
                          "size": "<size>",
                        },
                        "stream-browser.js": Object {
                          "size": "<size>",
                        },
                        "stream.js": Object {
                          "size": "<size>",
                        },
                      },
                    },
                  },
                },
              },
            },
            "package.json": Object {
              "size": "<size>",
            },
            "readable-browser.js": Object {
              "size": "<size>",
            },
            "readable.js": Object {
              "size": "<size>",
            },
          },
        },
        "safe-buffer": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "semver": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "bin": Object {
              "files": Object {
                "semver.js": Object {
                  "executable": true,
                  "size": "<size>",
                },
              },
            },
            "classes": Object {
              "files": Object {
                "comparator.js": Object {
                  "size": "<size>",
                },
                "index.js": Object {
                  "size": "<size>",
                },
                "range.js": Object {
                  "size": "<size>",
                },
                "semver.js": Object {
                  "size": "<size>",
                },
              },
            },
            "functions": Object {
              "files": Object {
                "clean.js": Object {
                  "size": "<size>",
                },
                "cmp.js": Object {
                  "size": "<size>",
                },
                "coerce.js": Object {
                  "size": "<size>",
                },
                "compare-build.js": Object {
                  "size": "<size>",
                },
                "compare-loose.js": Object {
                  "size": "<size>",
                },
                "compare.js": Object {
                  "size": "<size>",
                },
                "diff.js": Object {
                  "size": "<size>",
                },
                "eq.js": Object {
                  "size": "<size>",
                },
                "gt.js": Object {
                  "size": "<size>",
                },
                "gte.js": Object {
                  "size": "<size>",
                },
                "inc.js": Object {
                  "size": "<size>",
                },
                "lt.js": Object {
                  "size": "<size>",
                },
                "lte.js": Object {
                  "size": "<size>",
                },
                "major.js": Object {
                  "size": "<size>",
                },
                "minor.js": Object {
                  "size": "<size>",
                },
                "neq.js": Object {
                  "size": "<size>",
                },
                "parse.js": Object {
                  "size": "<size>",
                },
                "patch.js": Object {
                  "size": "<size>",
                },
                "prerelease.js": Object {
                  "size": "<size>",
                },
                "rcompare.js": Object {
                  "size": "<size>",
                },
                "rsort.js": Object {
                  "size": "<size>",
                },
                "satisfies.js": Object {
                  "size": "<size>",
                },
                "sort.js": Object {
                  "size": "<size>",
                },
                "valid.js": Object {
                  "size": "<size>",
                },
              },
            },
            "index.js": Object {
              "size": "<size>",
            },
            "internal": Object {
              "files": Object {
                "constants.js": Object {
                  "size": "<size>",
                },
                "debug.js": Object {
                  "size": "<size>",
                },
                "identifiers.js": Object {
                  "size": "<size>",
                },
                "parse-options.js": Object {
                  "size": "<size>",
                },
                "re.js": Object {
                  "size": "<size>",
                },
              },
            },
            "package.json": Object {
              "size": "<size>",
            },
            "preload.js": Object {
              "size": "<size>",
            },
            "range.bnf": Object {
              "size": "<size>",
            },
            "ranges": Object {
              "files": Object {
                "gtr.js": Object {
                  "size": "<size>",
                },
                "intersects.js": Object {
                  "size": "<size>",
                },
                "ltr.js": Object {
                  "size": "<size>",
                },
                "max-satisfying.js": Object {
                  "size": "<size>",
                },
                "min-satisfying.js": Object {
                  "size": "<size>",
                },
                "min-version.js": Object {
                  "size": "<size>",
                },
                "outside.js": Object {
                  "size": "<size>",
                },
                "simplify.js": Object {
                  "size": "<size>",
                },
                "subset.js": Object {
                  "size": "<size>",
                },
                "to-comparators.js": Object {
                  "size": "<size>",
                },
                "valid.js": Object {
                  "size": "<size>",
                },
              },
            },
          },
        },
        "simple-concat": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "simple-get": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "string_decoder": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "lib": Object {
              "files": Object {
                "string_decoder.js": Object {
                  "size": "<size>",
                },
              },
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "strip-json-comments": Object {
          "files": Object {
            "index.js": Object {
              "size": "<size>",
            },
            "license": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "tar-fs": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "tar-stream": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "extract.js": Object {
              "size": "<size>",
            },
            "headers.js": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "pack.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
            "sandbox.js": Object {
              "size": "<size>",
            },
          },
        },
        "three": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "build": Object {
              "files": Object {
                "three.cjs": Object {
                  "size": "<size>",
                },
                "three.js": Object {
                  "size": "<size>",
                },
                "three.min.js": Object {
                  "size": "<size>",
                },
                "three.module.js": Object {
                  "size": "<size>",
                },
                "three.module.min.js": Object {
                  "size": "<size>",
                },
              },
            },
            "package.json": Object {
              "size": "<size>",
            },
            "src": Object {
              "files": Object {
                "Three.Legacy.js": Object {
                  "size": "<size>",
                },
                "Three.js": Object {
                  "size": "<size>",
                },
                "animation": Object {
                  "files": Object {
                    "AnimationAction.js": Object {
                      "size": "<size>",
                    },
                    "AnimationClip.js": Object {
                      "size": "<size>",
                    },
                    "AnimationMixer.js": Object {
                      "size": "<size>",
                    },
                    "AnimationObjectGroup.js": Object {
                      "size": "<size>",
                    },
                    "AnimationUtils.js": Object {
                      "size": "<size>",
                    },
                    "KeyframeTrack.js": Object {
                      "size": "<size>",
                    },
                    "PropertyBinding.js": Object {
                      "size": "<size>",
                    },
                    "PropertyMixer.js": Object {
                      "size": "<size>",
                    },
                    "tracks": Object {
                      "files": Object {
                        "BooleanKeyframeTrack.js": Object {
                          "size": "<size>",
                        },
                        "ColorKeyframeTrack.js": Object {
                          "size": "<size>",
                        },
                        "NumberKeyframeTrack.js": Object {
                          "size": "<size>",
                        },
                        "QuaternionKeyframeTrack.js": Object {
                          "size": "<size>",
                        },
                        "StringKeyframeTrack.js": Object {
                          "size": "<size>",
                        },
                        "VectorKeyframeTrack.js": Object {
                          "size": "<size>",
                        },
                      },
                    },
                  },
                },
                "audio": Object {
                  "files": Object {
                    "Audio.js": Object {
                      "size": "<size>",
                    },
                    "AudioAnalyser.js": Object {
                      "size": "<size>",
                    },
                    "AudioContext.js": Object {
                      "size": "<size>",
                    },
                    "AudioListener.js": Object {
                      "size": "<size>",
                    },
                    "PositionalAudio.js": Object {
                      "size": "<size>",
                    },
                  },
                },
                "cameras": Object {
                  "files": Object {
                    "ArrayCamera.js": Object {
                      "size": "<size>",
                    },
                    "Camera.js": Object {
                      "size": "<size>",
                    },
                    "CubeCamera.js": Object {
                      "size": "<size>",
                    },
                    "OrthographicCamera.js": Object {
                      "executable": true,
                      "size": "<size>",
                    },
                    "PerspectiveCamera.js": Object {
                      "size": "<size>",
                    },
                    "StereoCamera.js": Object {
                      "size": "<size>",
                    },
                  },
                },
                "constants.js": Object {
                  "size": "<size>",
                },
                "core": Object {
                  "files": Object {
                    "BufferAttribute.js": Object {
                      "size": "<size>",
                    },
                    "BufferGeometry.js": Object {
                      "size": "<size>",
                    },
                    "Clock.js": Object {
                      "size": "<size>",
                    },
                    "EventDispatcher.js": Object {
                      "size": "<size>",
                    },
                    "GLBufferAttribute.js": Object {
                      "size": "<size>",
                    },
                    "InstancedBufferAttribute.js": Object {
                      "size": "<size>",
                    },
                    "InstancedBufferGeometry.js": Object {
                      "size": "<size>",
                    },
                    "InstancedInterleavedBuffer.js": Object {
                      "size": "<size>",
                    },
                    "InterleavedBuffer.js": Object {
                      "size": "<size>",
                    },
                    "InterleavedBufferAttribute.js": Object {
                      "size": "<size>",
                    },
                    "Layers.js": Object {
                      "size": "<size>",
                    },
                    "Object3D.js": Object {
                      "size": "<size>",
                    },
                    "Raycaster.js": Object {
                      "size": "<size>",
                    },
                    "RenderTarget.js": Object {
                      "size": "<size>",
                    },
                    "Uniform.js": Object {
                      "size": "<size>",
                    },
                    "UniformsGroup.js": Object {
                      "size": "<size>",
                    },
                  },
                },
                "extras": Object {
                  "files": Object {
                    "DataUtils.js": Object {
                      "size": "<size>",
                    },
                    "Earcut.js": Object {
                      "size": "<size>",
                    },
                    "ImageUtils.js": Object {
                      "size": "<size>",
                    },
                    "PMREMGenerator.js": Object {
                      "size": "<size>",
                    },
                    "ShapeUtils.js": Object {
                      "size": "<size>",
                    },
                    "core": Object {
                      "files": Object {
                        "Curve.js": Object {
                          "size": "<size>",
                        },
                        "CurvePath.js": Object {
                          "size": "<size>",
                        },
                        "Interpolations.js": Object {
                          "size": "<size>",
                        },
                        "Path.js": Object {
                          "size": "<size>",
                        },
                        "Shape.js": Object {
                          "size": "<size>",
                        },
                        "ShapePath.js": Object {
                          "size": "<size>",
                        },
                      },
                    },
                    "curves": Object {
                      "files": Object {
                        "ArcCurve.js": Object {
                          "size": "<size>",
                        },
                        "CatmullRomCurve3.js": Object {
                          "size": "<size>",
                        },
                        "CubicBezierCurve.js": Object {
                          "size": "<size>",
                        },
                        "CubicBezierCurve3.js": Object {
                          "size": "<size>",
                        },
                        "Curves.js": Object {
                          "size": "<size>",
                        },
                        "EllipseCurve.js": Object {
                          "size": "<size>",
                        },
                        "LineCurve.js": Object {
                          "size": "<size>",
                        },
                        "LineCurve3.js": Object {
                          "size": "<size>",
                        },
                        "QuadraticBezierCurve.js": Object {
                          "size": "<size>",
                        },
                        "QuadraticBezierCurve3.js": Object {
                          "size": "<size>",
                        },
                        "SplineCurve.js": Object {
                          "size": "<size>",
                        },
                      },
                    },
                  },
                },
                "geometries": Object {
                  "files": Object {
                    "BoxGeometry.js": Object {
                      "size": "<size>",
                    },
                    "CapsuleGeometry.js": Object {
                      "size": "<size>",
                    },
                    "CircleGeometry.js": Object {
                      "size": "<size>",
                    },
                    "ConeGeometry.js": Object {
                      "size": "<size>",
                    },
                    "CylinderGeometry.js": Object {
                      "size": "<size>",
                    },
                    "DodecahedronGeometry.js": Object {
                      "size": "<size>",
                    },
                    "EdgesGeometry.js": Object {
                      "size": "<size>",
                    },
                    "ExtrudeGeometry.js": Object {
                      "size": "<size>",
                    },
                    "Geometries.js": Object {
                      "size": "<size>",
                    },
                    "IcosahedronGeometry.js": Object {
                      "size": "<size>",
                    },
                    "LatheGeometry.js": Object {
                      "size": "<size>",
                    },
                    "OctahedronGeometry.js": Object {
                      "size": "<size>",
                    },
                    "PlaneGeometry.js": Object {
                      "size": "<size>",
                    },
                    "PolyhedronGeometry.js": Object {
                      "size": "<size>",
                    },
                    "RingGeometry.js": Object {
                      "size": "<size>",
                    },
                    "ShapeGeometry.js": Object {
                      "size": "<size>",
                    },
                    "SphereGeometry.js": Object {
                      "size": "<size>",
                    },
                    "TetrahedronGeometry.js": Object {
                      "size": "<size>",
                    },
                    "TorusGeometry.js": Object {
                      "size": "<size>",
                    },
                    "TorusKnotGeometry.js": Object {
                      "size": "<size>",
                    },
                    "TubeGeometry.js": Object {
                      "size": "<size>",
                    },
                    "WireframeGeometry.js": Object {
                      "size": "<size>",
                    },
                  },
                },
                "helpers": Object {
                  "files": Object {
                    "ArrowHelper.js": Object {
                      "size": "<size>",
                    },
                    "AxesHelper.js": Object {
                      "size": "<size>",
                    },
                    "Box3Helper.js": Object {
                      "size": "<size>",
                    },
                    "BoxHelper.js": Object {
                      "size": "<size>",
                    },
                    "CameraHelper.js": Object {
                      "size": "<size>",
                    },
                    "DirectionalLightHelper.js": Object {
                      "size": "<size>",
                    },
                    "GridHelper.js": Object {
                      "size": "<size>",
                    },
                    "HemisphereLightHelper.js": Object {
                      "size": "<size>",
                    },
                    "PlaneHelper.js": Object {
                      "size": "<size>",
                    },
                    "PointLightHelper.js": Object {
                      "size": "<size>",
                    },
                    "PolarGridHelper.js": Object {
                      "size": "<size>",
                    },
                    "SkeletonHelper.js": Object {
                      "size": "<size>",
                    },
                    "SpotLightHelper.js": Object {
                      "size": "<size>",
                    },
                  },
                },
                "lights": Object {
                  "files": Object {
                    "AmbientLight.js": Object {
                      "size": "<size>",
                    },
                    "DirectionalLight.js": Object {
                      "size": "<size>",
                    },
                    "DirectionalLightShadow.js": Object {
                      "size": "<size>",
                    },
                    "HemisphereLight.js": Object {
                      "size": "<size>",
                    },
                    "Light.js": Object {
                      "size": "<size>",
                    },
                    "LightProbe.js": Object {
                      "size": "<size>",
                    },
                    "LightShadow.js": Object {
                      "size": "<size>",
                    },
                    "PointLight.js": Object {
                      "size": "<size>",
                    },
                    "PointLightShadow.js": Object {
                      "size": "<size>",
                    },
                    "RectAreaLight.js": Object {
                      "size": "<size>",
                    },
                    "SpotLight.js": Object {
                      "size": "<size>",
                    },
                    "SpotLightShadow.js": Object {
                      "size": "<size>",
                    },
                  },
                },
                "loaders": Object {
                  "files": Object {
                    "AnimationLoader.js": Object {
                      "size": "<size>",
                    },
                    "AudioLoader.js": Object {
                      "size": "<size>",
                    },
                    "BufferGeometryLoader.js": Object {
                      "size": "<size>",
                    },
                    "Cache.js": Object {
                      "size": "<size>",
                    },
                    "CompressedTextureLoader.js": Object {
                      "size": "<size>",
                    },
                    "CubeTextureLoader.js": Object {
                      "size": "<size>",
                    },
                    "DataTextureLoader.js": Object {
                      "size": "<size>",
                    },
                    "FileLoader.js": Object {
                      "size": "<size>",
                    },
                    "ImageBitmapLoader.js": Object {
                      "size": "<size>",
                    },
                    "ImageLoader.js": Object {
                      "size": "<size>",
                    },
                    "Loader.js": Object {
                      "size": "<size>",
                    },
                    "LoaderUtils.js": Object {
                      "size": "<size>",
                    },
                    "LoadingManager.js": Object {
                      "size": "<size>",
                    },
                    "MaterialLoader.js": Object {
                      "size": "<size>",
                    },
                    "ObjectLoader.js": Object {
                      "size": "<size>",
                    },
                    "TextureLoader.js": Object {
                      "size": "<size>",
                    },
                  },
                },
                "materials": Object {
                  "files": Object {
                    "LineBasicMaterial.js": Object {
                      "size": "<size>",
                    },
                    "LineDashedMaterial.js": Object {
                      "size": "<size>",
                    },
                    "Material.js": Object {
                      "size": "<size>",
                    },
                    "Materials.js": Object {
                      "size": "<size>",
                    },
                    "MeshBasicMaterial.js": Object {
                      "size": "<size>",
                    },
                    "MeshDepthMaterial.js": Object {
                      "size": "<size>",
                    },
                    "MeshDistanceMaterial.js": Object {
                      "size": "<size>",
                    },
                    "MeshLambertMaterial.js": Object {
                      "size": "<size>",
                    },
                    "MeshMatcapMaterial.js": Object {
                      "size": "<size>",
                    },
                    "MeshNormalMaterial.js": Object {
                      "size": "<size>",
                    },
                    "MeshPhongMaterial.js": Object {
                      "size": "<size>",
                    },
                    "MeshPhysicalMaterial.js": Object {
                      "size": "<size>",
                    },
                    "MeshStandardMaterial.js": Object {
                      "size": "<size>",
                    },
                    "MeshToonMaterial.js": Object {
                      "size": "<size>",
                    },
                    "PointsMaterial.js": Object {
                      "size": "<size>",
                    },
                    "RawShaderMaterial.js": Object {
                      "size": "<size>",
                    },
                    "ShaderMaterial.js": Object {
                      "size": "<size>",
                    },
                    "ShadowMaterial.js": Object {
                      "size": "<size>",
                    },
                    "SpriteMaterial.js": Object {
                      "size": "<size>",
                    },
                  },
                },
                "math": Object {
                  "files": Object {
                    "Box2.js": Object {
                      "size": "<size>",
                    },
                    "Box3.js": Object {
                      "size": "<size>",
                    },
                    "Color.js": Object {
                      "size": "<size>",
                    },
                    "ColorManagement.js": Object {
                      "size": "<size>",
                    },
                    "Cylindrical.js": Object {
                      "size": "<size>",
                    },
                    "Euler.js": Object {
                      "size": "<size>",
                    },
                    "Frustum.js": Object {
                      "size": "<size>",
                    },
                    "Interpolant.js": Object {
                      "size": "<size>",
                    },
                    "Line3.js": Object {
                      "size": "<size>",
                    },
                    "MathUtils.js": Object {
                      "size": "<size>",
                    },
                    "Matrix3.js": Object {
                      "size": "<size>",
                    },
                    "Matrix4.js": Object {
                      "size": "<size>",
                    },
                    "Plane.js": Object {
                      "size": "<size>",
                    },
                    "Quaternion.js": Object {
                      "size": "<size>",
                    },
                    "Ray.js": Object {
                      "size": "<size>",
                    },
                    "Sphere.js": Object {
                      "size": "<size>",
                    },
                    "Spherical.js": Object {
                      "size": "<size>",
                    },
                    "SphericalHarmonics3.js": Object {
                      "size": "<size>",
                    },
                    "Triangle.js": Object {
                      "size": "<size>",
                    },
                    "Vector2.js": Object {
                      "size": "<size>",
                    },
                    "Vector3.js": Object {
                      "size": "<size>",
                    },
                    "Vector4.js": Object {
                      "size": "<size>",
                    },
                    "interpolants": Object {
                      "files": Object {
                        "CubicInterpolant.js": Object {
                          "size": "<size>",
                        },
                        "DiscreteInterpolant.js": Object {
                          "size": "<size>",
                        },
                        "LinearInterpolant.js": Object {
                          "size": "<size>",
                        },
                        "QuaternionLinearInterpolant.js": Object {
                          "size": "<size>",
                        },
                      },
                    },
                  },
                },
                "objects": Object {
                  "files": Object {
                    "BatchedMesh.js": Object {
                      "size": "<size>",
                    },
                    "Bone.js": Object {
                      "size": "<size>",
                    },
                    "Group.js": Object {
                      "size": "<size>",
                    },
                    "InstancedMesh.js": Object {
                      "size": "<size>",
                    },
                    "LOD.js": Object {
                      "size": "<size>",
                    },
                    "Line.js": Object {
                      "size": "<size>",
                    },
                    "LineLoop.js": Object {
                      "size": "<size>",
                    },
                    "LineSegments.js": Object {
                      "size": "<size>",
                    },
                    "Mesh.js": Object {
                      "size": "<size>",
                    },
                    "Points.js": Object {
                      "size": "<size>",
                    },
                    "Skeleton.js": Object {
                      "size": "<size>",
                    },
                    "SkinnedMesh.js": Object {
                      "size": "<size>",
                    },
                    "Sprite.js": Object {
                      "size": "<size>",
                    },
                  },
                },
                "renderers": Object {
                  "files": Object {
                    "WebGL1Renderer.js": Object {
                      "size": "<size>",
                    },
                    "WebGL3DRenderTarget.js": Object {
                      "size": "<size>",
                    },
                    "WebGLArrayRenderTarget.js": Object {
                      "size": "<size>",
                    },
                    "WebGLCubeRenderTarget.js": Object {
                      "size": "<size>",
                    },
                    "WebGLMultipleRenderTargets.js": Object {
                      "size": "<size>",
                    },
                    "WebGLRenderTarget.js": Object {
                      "size": "<size>",
                    },
                    "WebGLRenderer.js": Object {
                      "size": "<size>",
                    },
                    "shaders": Object {
                      "files": Object {
                        "ShaderChunk": Object {
                          "files": Object {
                            "alphahash_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "alphahash_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "alphamap_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "alphamap_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "alphatest_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "alphatest_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "aomap_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "aomap_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "batching_pars_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "batching_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "begin_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "beginnormal_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "bsdfs.glsl.js": Object {
                              "size": "<size>",
                            },
                            "bumpmap_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "clearcoat_normal_fragment_begin.glsl.js": Object {
                              "size": "<size>",
                            },
                            "clearcoat_normal_fragment_maps.glsl.js": Object {
                              "size": "<size>",
                            },
                            "clearcoat_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "clipping_planes_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "clipping_planes_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "clipping_planes_pars_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "clipping_planes_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "color_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "color_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "color_pars_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "color_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "colorspace_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "colorspace_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "common.glsl.js": Object {
                              "size": "<size>",
                            },
                            "cube_uv_reflection_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "default_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "default_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "defaultnormal_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "displacementmap_pars_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "displacementmap_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "dithering_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "dithering_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "emissivemap_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "emissivemap_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "envmap_common_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "envmap_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "envmap_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "envmap_pars_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "envmap_physical_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "envmap_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "fog_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "fog_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "fog_pars_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "fog_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "gradientmap_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "iridescence_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "iridescence_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "lightmap_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "lightmap_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "lights_fragment_begin.glsl.js": Object {
                              "size": "<size>",
                            },
                            "lights_fragment_end.glsl.js": Object {
                              "size": "<size>",
                            },
                            "lights_fragment_maps.glsl.js": Object {
                              "size": "<size>",
                            },
                            "lights_lambert_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "lights_lambert_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "lights_pars_begin.glsl.js": Object {
                              "size": "<size>",
                            },
                            "lights_phong_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "lights_phong_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "lights_physical_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "lights_physical_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "lights_toon_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "lights_toon_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "logdepthbuf_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "logdepthbuf_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "logdepthbuf_pars_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "logdepthbuf_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "map_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "map_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "map_particle_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "map_particle_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "metalnessmap_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "metalnessmap_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "morphcolor_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "morphnormal_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "morphtarget_pars_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "morphtarget_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "normal_fragment_begin.glsl.js": Object {
                              "size": "<size>",
                            },
                            "normal_fragment_maps.glsl.js": Object {
                              "size": "<size>",
                            },
                            "normal_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "normal_pars_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "normal_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "normalmap_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "opaque_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "packing.glsl.js": Object {
                              "size": "<size>",
                            },
                            "premultiplied_alpha_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "project_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "roughnessmap_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "roughnessmap_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "shadowmap_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "shadowmap_pars_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "shadowmap_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "shadowmask_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "skinbase_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "skinning_pars_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "skinning_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "skinnormal_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "specularmap_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "specularmap_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "tonemapping_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "tonemapping_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "transmission_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "transmission_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "uv_pars_fragment.glsl.js": Object {
                              "size": "<size>",
                            },
                            "uv_pars_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "uv_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                            "worldpos_vertex.glsl.js": Object {
                              "size": "<size>",
                            },
                          },
                        },
                        "ShaderChunk.js": Object {
                          "size": "<size>",
                        },
                        "ShaderLib": Object {
                          "files": Object {
                            "background.glsl.js": Object {
                              "size": "<size>",
                            },
                            "backgroundCube.glsl.js": Object {
                              "size": "<size>",
                            },
                            "cube.glsl.js": Object {
                              "size": "<size>",
                            },
                            "depth.glsl.js": Object {
                              "size": "<size>",
                            },
                            "distanceRGBA.glsl.js": Object {
                              "size": "<size>",
                            },
                            "equirect.glsl.js": Object {
                              "size": "<size>",
                            },
                            "linedashed.glsl.js": Object {
                              "size": "<size>",
                            },
                            "meshbasic.glsl.js": Object {
                              "size": "<size>",
                            },
                            "meshlambert.glsl.js": Object {
                              "size": "<size>",
                            },
                            "meshmatcap.glsl.js": Object {
                              "size": "<size>",
                            },
                            "meshnormal.glsl.js": Object {
                              "size": "<size>",
                            },
                            "meshphong.glsl.js": Object {
                              "size": "<size>",
                            },
                            "meshphysical.glsl.js": Object {
                              "size": "<size>",
                            },
                            "meshtoon.glsl.js": Object {
                              "size": "<size>",
                            },
                            "points.glsl.js": Object {
                              "size": "<size>",
                            },
                            "shadow.glsl.js": Object {
                              "size": "<size>",
                            },
                            "sprite.glsl.js": Object {
                              "size": "<size>",
                            },
                            "vsm.glsl.js": Object {
                              "size": "<size>",
                            },
                          },
                        },
                        "ShaderLib.js": Object {
                          "size": "<size>",
                        },
                        "UniformsLib.js": Object {
                          "size": "<size>",
                        },
                        "UniformsUtils.js": Object {
                          "size": "<size>",
                        },
                      },
                    },
                    "webgl": Object {
                      "files": Object {
                        "WebGLAnimation.js": Object {
                          "size": "<size>",
                        },
                        "WebGLAttributes.js": Object {
                          "size": "<size>",
                        },
                        "WebGLBackground.js": Object {
                          "size": "<size>",
                        },
                        "WebGLBindingStates.js": Object {
                          "size": "<size>",
                        },
                        "WebGLBufferRenderer.js": Object {
                          "size": "<size>",
                        },
                        "WebGLCapabilities.js": Object {
                          "size": "<size>",
                        },
                        "WebGLClipping.js": Object {
                          "size": "<size>",
                        },
                        "WebGLCubeMaps.js": Object {
                          "size": "<size>",
                        },
                        "WebGLCubeUVMaps.js": Object {
                          "size": "<size>",
                        },
                        "WebGLExtensions.js": Object {
                          "size": "<size>",
                        },
                        "WebGLGeometries.js": Object {
                          "size": "<size>",
                        },
                        "WebGLIndexedBufferRenderer.js": Object {
                          "size": "<size>",
                        },
                        "WebGLInfo.js": Object {
                          "size": "<size>",
                        },
                        "WebGLLights.js": Object {
                          "size": "<size>",
                        },
                        "WebGLMaterials.js": Object {
                          "size": "<size>",
                        },
                        "WebGLMorphtargets.js": Object {
                          "size": "<size>",
                        },
                        "WebGLObjects.js": Object {
                          "size": "<size>",
                        },
                        "WebGLProgram.js": Object {
                          "size": "<size>",
                        },
                        "WebGLPrograms.js": Object {
                          "size": "<size>",
                        },
                        "WebGLProperties.js": Object {
                          "size": "<size>",
                        },
                        "WebGLRenderLists.js": Object {
                          "size": "<size>",
                        },
                        "WebGLRenderStates.js": Object {
                          "size": "<size>",
                        },
                        "WebGLShader.js": Object {
                          "size": "<size>",
                        },
                        "WebGLShaderCache.js": Object {
                          "size": "<size>",
                        },
                        "WebGLShadowMap.js": Object {
                          "size": "<size>",
                        },
                        "WebGLState.js": Object {
                          "size": "<size>",
                        },
                        "WebGLTextures.js": Object {
                          "size": "<size>",
                        },
                        "WebGLUniforms.js": Object {
                          "size": "<size>",
                        },
                        "WebGLUniformsGroups.js": Object {
                          "size": "<size>",
                        },
                        "WebGLUtils.js": Object {
                          "size": "<size>",
                        },
                      },
                    },
                    "webxr": Object {
                      "files": Object {
                        "WebXRController.js": Object {
                          "size": "<size>",
                        },
                        "WebXRManager.js": Object {
                          "size": "<size>",
                        },
                      },
                    },
                  },
                },
                "scenes": Object {
                  "files": Object {
                    "Fog.js": Object {
                      "size": "<size>",
                    },
                    "FogExp2.js": Object {
                      "size": "<size>",
                    },
                    "Scene.js": Object {
                      "size": "<size>",
                    },
                  },
                },
                "textures": Object {
                  "files": Object {
                    "CanvasTexture.js": Object {
                      "size": "<size>",
                    },
                    "CompressedArrayTexture.js": Object {
                      "size": "<size>",
                    },
                    "CompressedCubeTexture.js": Object {
                      "size": "<size>",
                    },
                    "CompressedTexture.js": Object {
                      "size": "<size>",
                    },
                    "CubeTexture.js": Object {
                      "size": "<size>",
                    },
                    "Data3DTexture.js": Object {
                      "size": "<size>",
                    },
                    "DataArrayTexture.js": Object {
                      "size": "<size>",
                    },
                    "DataTexture.js": Object {
                      "size": "<size>",
                    },
                    "DepthTexture.js": Object {
                      "size": "<size>",
                    },
                    "FramebufferTexture.js": Object {
                      "size": "<size>",
                    },
                    "Source.js": Object {
                      "size": "<size>",
                    },
                    "Texture.js": Object {
                      "size": "<size>",
                    },
                    "VideoTexture.js": Object {
                      "size": "<size>",
                    },
                  },
                },
                "utils.js": Object {
                  "size": "<size>",
                },
              },
            },
          },
        },
        "tunnel-agent": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "index.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "util-deprecate": Object {
          "files": Object {
            "History.md": Object {
              "size": "<size>",
            },
            "LICENSE": Object {
              "size": "<size>",
            },
            "browser.js": Object {
              "size": "<size>",
            },
            "node.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
        "wrappy": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
            "wrappy.js": Object {
              "size": "<size>",
            },
          },
        },
        "yallist": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "iterator.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
            "yallist.js": Object {
              "size": "<size>",
            },
          },
        },
      },
    },
    "package.json": Object {
      "size": "<size>",
    },
  },
}
`;

exports[`posix smart unpack 3`] = `
Array [
  "app.asar",
]
`;

exports[`relative index 1`] = `
Object {
  "linux": Array [],
}
`;

exports[`win smart unpack 1`] = `
Object {
  "win": Array [],
}
`;

exports[`win smart unpack 2`] = `
Object {
  "files": Object {
    "app": Object {
      "files": Object {
        "package.json": Object {
          "files": Object {
            "readme.md": Object {
              "size": "<size>",
            },
          },
        },
        "readme.md": Object {
          "size": "<size>",
        },
      },
    },
    "index.html": Object {
      "size": "<size>",
    },
    "index.js": Object {
      "size": "<size>",
    },
    "node_modules": Object {
      "files": Object {
        "@electron-builder": Object {
          "files": Object {
            "test-smart-unpack": Object {
              "files": Object {
                "foo.dll": Object {
                  "size": "<size>",
                  "unpacked": true,
                },
                "package.json": Object {
                  "size": "<size>",
                  "unpacked": true,
                },
              },
              "unpacked": true,
            },
            "test-smart-unpack-empty": Object {
              "files": Object {
                "package.json": Object {
                  "size": "<size>",
                },
              },
            },
          },
        },
        "debug": Object {
          "files": Object {
            "LICENSE": Object {
              "size": "<size>",
            },
            "Makefile": Object {
              "size": "<size>",
            },
            "node.js": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
            "src": Object {
              "files": Object {
                "browser.js": Object {
                  "size": "<size>",
                },
                "debug.js": Object {
                  "size": "<size>",
                },
                "index.js": Object {
                  "size": "<size>",
                },
                "node.js": Object {
                  "size": "<size>",
                },
              },
            },
          },
        },
        "edge-cs": Object {
          "files": Object {
            "LICENSE.txt": Object {
              "size": "<size>",
              "unpacked": true,
            },
            "lib": Object {
              "files": Object {
                "bootstrap": Object {
                  "files": Object {
                    "Dummy.cs": Object {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "project.json": Object {
                      "size": "<size>",
                      "unpacked": true,
                    },
                  },
                  "unpacked": true,
                },
                "edge-cs.dll": Object {
                  "size": "<size>",
                  "unpacked": true,
                },
                "edge-cs.js": Object {
                  "size": "<size>",
                  "unpacked": true,
                },
              },
              "unpacked": true,
            },
            "package.json": Object {
              "size": "<size>",
              "unpacked": true,
            },
            "src": Object {
              "files": Object {
                "Edge.js.CSharp": Object {
                  "files": Object {
                    "EdgeCompiler.cs": Object {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "gulpfile.js": Object {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "package.json": Object {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "project.json": Object {
                      "size": "<size>",
                      "unpacked": true,
                    },
                  },
                  "unpacked": true,
                },
                "edge-cs": Object {
                  "files": Object {
                    "EdgeCompiler.cs": Object {
                      "size": "<size>",
                      "unpacked": true,
                    },
                    "Properties": Object {
                      "files": Object {
                        "AssemblyInfo.cs": Object {
                          "size": "<size>",
                          "unpacked": true,
                        },
                      },
                      "unpacked": true,
                    },
                  },
                  "unpacked": true,
                },
              },
            },
            "tools": Object {
              "files": Object {
                "install.js": Object {
                  "size": "<size>",
                  "unpacked": true,
                },
              },
              "unpacked": true,
            },
          },
          "unpacked": true,
        },
        "ms": Object {
          "files": Object {
            "index.js": Object {
              "size": "<size>",
            },
            "license.md": Object {
              "size": "<size>",
            },
            "package.json": Object {
              "size": "<size>",
            },
          },
        },
      },
    },
    "package.json": Object {
      "size": "<size>",
    },
  },
}
`;

exports[`win smart unpack 3`] = `
Array [
  "app.asar",
  "app.asar.unpacked/node_modules/edge-cs/LICENSE.txt",
  Object {
    "content": "{
  \\"name\\": \\"edge-cs\\",
  \\"author\\": {
    \\"name\\": \\"Tomasz Janczuk <tomasz@janczuk.org>\\",
    \\"url\\": \\"http://tomasz.janczuk.org\\",
    \\"twitter\\": \\"tjanczuk\\"
  },
  \\"version\\": \\"1.2.1\\",
  \\"description\\": \\"Edge-cs: run C# and node.js code in-process with edge.js\\",
  \\"main\\": \\"./lib/edge-cs.js\\",
  \\"engines\\": {
    \\"node\\": \\">= 0.8\\"
  },
  \\"licenses\\": [
    {
      \\"type\\": \\"Apache\\",
      \\"url\\": \\"http://www.apache.org/licenses/LICENSE-2.0\\"
    }
  ],
  \\"dependencies\\": {},
  \\"homepage\\": \\"http://tjanczuk.github.com/edge\\",
  \\"repository\\": {
    \\"type\\": \\"git\\",
    \\"url\\": \\"git@github.com:tjanczuk/edge-cs.git\\"
  }
}",
    "name": "app.asar.unpacked/node_modules/edge-cs/package.json",
  },
  "app.asar.unpacked/node_modules/edge-cs/tools/install.js",
  "app.asar.unpacked/node_modules/edge-cs/src/edge-cs/EdgeCompiler.cs",
  "app.asar.unpacked/node_modules/edge-cs/src/edge-cs/Properties/AssemblyInfo.cs",
  "app.asar.unpacked/node_modules/edge-cs/src/Edge.js.CSharp/EdgeCompiler.cs",
  "app.asar.unpacked/node_modules/edge-cs/src/Edge.js.CSharp/gulpfile.js",
  Object {
    "content": "{
    \\"devDependencies\\": {
        \\"gulp\\": \\"3.9.0\\"
    }
}",
    "name": "app.asar.unpacked/node_modules/edge-cs/src/Edge.js.CSharp/package.json",
  },
  "app.asar.unpacked/node_modules/edge-cs/src/Edge.js.CSharp/project.json",
  "app.asar.unpacked/node_modules/edge-cs/lib/edge-cs.dll",
  "app.asar.unpacked/node_modules/edge-cs/lib/edge-cs.js",
  "app.asar.unpacked/node_modules/edge-cs/lib/bootstrap/Dummy.cs",
  "app.asar.unpacked/node_modules/edge-cs/lib/bootstrap/project.json",
  "app.asar.unpacked/node_modules/@electron-builder/test-smart-unpack/foo.dll",
  Object {
    "content": "{
  \\"name\\": \\"@electron-builder/test-smart-unpack\\",
  \\"version\\": \\"1.0.0\\"
}
",
    "name": "app.asar.unpacked/node_modules/@electron-builder/test-smart-unpack/package.json",
  },
]
`;

exports[`win smart unpack 4`] = `
Array [
  "node_modules/@electron-builder/test-smart-unpack/package.json",
  "node_modules/@electron-builder/test-smart-unpack-empty/package.json",
  "node_modules/debug/.coveralls.yml",
  "node_modules/debug/.eslintrc",
  "node_modules/debug/.npmignore",
  "node_modules/debug/.travis.yml",
  "node_modules/debug/CHANGELOG.md",
  "node_modules/debug/README.md",
  "node_modules/debug/karma.conf.js",
  "node_modules/debug/node.js",
  "node_modules/debug/package.json",
  "node_modules/debug/src/browser.js",
  "node_modules/debug/src/debug.js",
  "node_modules/debug/src/index.js",
  "node_modules/debug/src/node.js",
  "node_modules/edge-cs/.gitattributes",
  "node_modules/edge-cs/.npmignore",
  "node_modules/edge-cs/LICENSE.txt",
  "node_modules/edge-cs/README.md",
  "node_modules/edge-cs/package.json",
  "node_modules/edge-cs/tools/install.js",
  "node_modules/edge-cs/src/Edge.js.CSharp",
  "node_modules/edge-cs/src/edge-cs/EdgeCompiler.cs",
  "node_modules/edge-cs/src/edge-cs/edge-cs.csproj",
  "node_modules/edge-cs/src/edge-cs/edge-cs.sln",
  "node_modules/edge-cs/src/edge-cs/Properties/AssemblyInfo.cs",
  "node_modules/edge-cs/src/Edge.js.CSharp/EdgeCompiler.cs",
  "node_modules/edge-cs/src/Edge.js.CSharp/edge-cs-coreclr.sln",
  "node_modules/edge-cs/src/Edge.js.CSharp/edge-cs-coreclr.xproj",
  "node_modules/edge-cs/src/Edge.js.CSharp/gulpfile.js",
  "node_modules/edge-cs/src/Edge.js.CSharp/package.json",
  "node_modules/edge-cs/src/Edge.js.CSharp/project.json",
  "node_modules/edge-cs/lib/edge-cs.js",
  "node_modules/edge-cs/lib/bootstrap/Dummy.cs",
  "node_modules/edge-cs/lib/bootstrap/project.json",
  "node_modules/ms/index.js",
  "node_modules/ms/license.md",
  "node_modules/ms/package.json",
  "node_modules/ms/readme.md",
]
`;

exports[`www as default dir 1`] = `
Object {
  "linux": Array [],
}
`;
